Added Special Pages
Added the special pages files as well as the alias files for the Special Pages. Changed some configuration files around to try to fix the Special pages being displayed.

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -4,5 +4,8 @@
 			"Your Name"
 		]
 	},
-	"boilerplate-desc": "{{desc|name=Boilerplate|url=https://www.mediawiki.org/wiki/Extension:Boilerplate}}"
+	"boilerplate-desc": "{{desc|name=Boilerplate|url=https://www.mediawiki.org/wiki/Extension:Boilerplate}}",
+	"NativeFileList": "Native File List",
+	"NativeFileList-desc": "{{desc}}",
+	"NativeFileList-summary": "Description"
 }
